Add personal info

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         gtag('config', 'G-LDSQMLZ3GJ');
     </script> -->
-    <title> Cheng Chi </title>
+    <title> Zeyi Liu </title>
 </head>
 
 <body>
@@ -24,43 +24,44 @@
             <a href="#profile-intro">Home</a>
             <a href="#updates">Updates</a>
             <a href="#research">Research</a>
-            <!-- <a href="#projects">Projects</a> -->
+            <!-- <a href="#blogs">Blogs</a> -->
         </header>
         <div id="profile">
             <div id="profile-pic">
                 <img src="assets/images/profile.jpg" />
                 <p style="text-align:left;margin-top:-15px;">Picture taken by <a
-                        href="http://www.columbia.edu/~hqh2101/">Huy Ha</a></p>
+                        href="https://www.linkedin.com/in/yutian-lin/">Tina Lin</a></p>
             </div>
             <div id="profile-intro">
-                <div id="profile-name">Cheng Chi 迟宬</div>
-                <div id="profile-email">cheng dot chi at columbia dot edu</div>
+                <div id="profile-name">Zeyi Liu 刘泽怡</div>
+                <div id="profile-email">liuzeyi at cs dot columbia dot edu</div>
                 <p>
-                    I'm a Computer Science PhD student at Columbia University. 
-                    I have always been fascinated by the interaction between computers 
-                    and the physical world. Branching out from this theme, I have explored 
-                    Geometric/Probabilistic Algorithms, Mapping/Geographic Information Systems, 
-                    and Camera Architecture/Computational Photography under various academic 
-                    and industrial settings.
+                    Hi, I'm a first-year Computer Science PhD student at Columbia University.
+                    My work focuses on developing methods for embodied agents to better understand diverse environments and plan for complex tasks. 
+                    I have a vision for robots that are able to assist humans in household environments.
                 </p>
                 <p>
                     I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>.
-                    My research will focus on robotic manipulation and perception.
+                    My research will focus on robot manipulation and computer vision.
                 </p>
                 <p>
-                    Learning random things has been the greatest source of pleasure for me, and I hope this will never stop.
-                    Recently, I have been studying the science of cooking in my free time.
+                    I'm interested in exploring new things as driven by my curiosity. 
+                    I recently picked up sailing as a hobby when I was spending my summer in Boston.
                 </p>
                 <div>
-                    <a href="assets/files/cv.pdf">
-                      CV
+                    <a href="https://scholar.google.com/citations?hl=en&user=Hzw-rp4AAAAJ">
+                      Google Scholar
                     </a>
                     /
-                    <a href="https://twitter.com/chichengcc">
+                    <a href="https://www.linkedin.com/in/zeyi-liu">
+                        LinkedIn
+                    </a>
+                    /
+                    <a href="https://twitter.com/Liu_Zeyi_">
                       Twitter
                     </a>
                     /
-                    <a href="https://github.com/cheng-chi">
+                    <a href="https://github.com/lzylucy">
                         Github
                     </a>
                     </a>
@@ -71,13 +72,9 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
-                <li> <b>Jun 2022</b> <a href="https://irp.cs.columbia.edu/">Iterative Residual Policy</a> won the <a href="https://roboticsconference.org/program/awards">Best Paper Award</a> at RSS 2022!
-                <li> <b>May 2022</b> <a href="https://irp.cs.columbia.edu/">Iterative Residual Policy</a> has been selected as <a href="https://roboticsconference.org/program/awards">Best Student Paper Finalist</a> at RSS 2022!
-                <li> <b>May 2022</b> <a href="https://dextairity.cs.columbia.edu/">DextAIRity</a> has been selected as <a href="https://roboticsconference.org/program/awards">Best Systems Paper Finalist</a> at RSS 2022!
-                <li> <b>May 2022</b> Two papers accepted to RSS 2022
-                <li> <b>Jul 2021</b> <a href="https://garmentnets.cs.columbia.edu/">GarmentNets</a> has been accpeted to ICCV 2021
-                <li> <b>Jan 2021</b> I started my PhD at Columbia University, advised by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>
-                <li> <b>Jan 2020</b> I started working for <a href="https://www.nuro.ai/">Nuro</a>'s Mapping and Localization Team
+                <li> <b>Sep 2021</b> My undergraduate project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accpeted by <a href="https://corl2022.org/">CoRL 2022</a>!
+                <li> <b>Sep 2021</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻
+                <li> <b>May 2022</b> Graduated from Columia with a BS in computer science. 🦁️
             </ul>
             <p></p>
             <div style="clear: both;"></div>
