Correct some errors

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <ul>
                 <li> <b>Sep 2021</b> My undergraduate project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accpeted by <a href="https://corl2022.org/">CoRL 2022</a>!
                 <li> <b>Sep 2021</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻
-                <li> <b>May 2022</b> Graduated from Columia with a BS in computer science. 🦁️
+                <li> <b>May 2022</b> Graduated from Columbia University (SEAS) with a BS in Computer Science 🦁️
             </ul>
             <p></p>
             <div style="clear: both;"></div>
