--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>
                     Hi, I'm a first-year Computer Science PhD student at Columbia University.
                     My work focuses on developing methods for embodied agents to better understand diverse environments and plan for complex tasks. 
-                    I have a vision for robots that are able to assist humans in household environments.
+                    I'm particularly interested in developing robots that are able to assist humans in household environments.
                 </p>
                 <p>
                     I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>.
@@ -83,84 +83,23 @@
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
             <div>
-                <a href="https://irp.cs.columbia.edu/" style="height: 12em;" class="research-thumb">
+                <a href="https://busybot.cs.columbia.edu/" style="height: 12em;" class="research-thumb">
                     <video width="320" height="auto" autoplay loop muted>
-                        <source src="assets/images/irp_gif_short.mp4" type="video/mp4">
+                        <source src="assets/images/BusyBot_CoRL.gif" type="video/mp4">
                     </video>
                 </a>
-                <a href="https://irp.cs.columbia.edu/" class="research-proj-title">
-                    Iterative Residual Policy: for Goal-Conditioned Dynamic Manipulation of Deformable Objects
+                <a href="https://busybot.cs.columbia.edu/" class="research-proj-title">
+                    BusyBot: Learning to Interact, Reason, and Plan in a BusyBoard Environment
                 </a>
                 <p>
-                    <b>Cheng Chi</b>
-                    ,<a style="color:#000;" href="http://www.benburchfiel.com/">Benjamin Burchfiel</a>
-                    ,<a style="color:#000;" href="https://www.eacousineau.com/">Eric Cousineau</a>
-                    ,<a style="color:#000;" href="https://www.cs.cmu.edu/~sfeng/">Siyuan Feng</a>
+                    <b>Zeyi Liu</b>
+                    ,<a style="color:#000;" href="https://www.zhenjiaxu.com/">Zhenjia Xu</a>
                     ,<a style="color:#000;" href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>
-                    <br>Robotics: Science and Systems (RSS), June 2022<br>
-                    <strong>Best Paper Award</strong> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <strong>Best Student Paper Finalist</strong>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://irp.cs.columbia.edu/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/abs/2203.00663">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://youtu.be/7h3SZ3La-oA">Video</a>
-                </p>
-            </div>
-
-            <div>
-                <a href="https://dextairity.cs.columbia.edu/" style="height: 14em;" class="research-thumb">
-                    <img src="assets/images/DextAIRity_RSS.gif"
-                        style=" margin-bottom:-10px;"
-                        alt="">
-                </a>
-                <a href="https://dextairity.cs.columbia.edu/" class="research-proj-title">
-                    DextAIRity: Deformable Manipulation Can be a Breeze
-                </a>
-                <p>
-                    <a style="color:#000;" href="https://www.zhenjiaxu.com">Zhenjia Xu</a>
-                    ,<b>Cheng Chi</b>
-                    ,<a style="color:#000;" href="http://www.benburchfiel.com/">Benjamin Burchfiel</a>
-                    ,<a style="color:#000;" href="https://www.eacousineau.com/">Eric Cousineau</a>
-                    ,<a style="color:#000;" href="https://www.cs.cmu.edu/~sfeng/">Siyuan Feng</a>
-                    ,<a style="color:#000;" href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>
-                    <br>Robotics: Science and Systems (RSS), June 2022<br>
-                    <strong>Best Systems Paper Finalist</strong> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://dextairity.cs.columbia.edu/">Website</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/abs/2203.01197">ArXiv</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://youtu.be/_B0TpAa5tVo">Video</a>
-                </p>
-            </div>
-
-            <div>
-                <a href="https://garmentnets.cs.columbia.edu/" style="height: 12em;" class="research-thumb">
-                    <video width="320" height="auto" autoplay loop muted>
-                        <source src="assets/images/garment-nets.mp4" type="video/mp4">
-                    </video>
-                </a>
-                <a href="https://garmentnets.cs.columbia.edu/" class="research-proj-title">
-                  GarmentNets: Category-Level Pose Estimation for Garments via Canonical Space Shape Completion
-                </a>
-                <p>
-                    <b>Cheng Chi</b>, <a style="color:#000;" href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>
-                    <br>The IEEE International Conference on Computer Vision (ICCV), October 2021.<br>
-                    <a href="https://garmentnets.cs.columbia.edu/">Website</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://arxiv.org/abs/2104.05177">ArXiv</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://www.youtube.com/watch?v=agZ8bzP6Vig">Video</a>
-                </p>
-            </div>
-            <div>
-                <a class="research-thumb">
-                  <img src="assets/images/cpcpd_teaser.png" alt="">
-                </a>
-                <a class="research-proj-title"> 
-                  Occlusion-robust Deformable Object Tracking without Physics Simulation 
-                </a>
-                <p>
-                    <b>Cheng Chi</b>, <a style="color:#000;"
-                        href="https://web.eecs.umich.edu/~dmitryb/">Dmitry Berenson</a>
-                    <br>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), November 2019.<br>
-                    <a href="https://arxiv.org/abs/2101.00733">ArXiv</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://github.com/UM-ARM-Lab/cdcpd">Github</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://www.youtube.com/watch?v=NehFOkpCEHg">Video</a>
+                    <br>Conference on Robot Learning (CoRL), December 2022<br>
+                    <a href="https://busybot.cs.columbia.edu/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2207.08192">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://youtu.be/EJ98xBJZ9ek">Video</a>
+                    <a href="/">Code coming soon</a>
                 </p>
             </div>
             <!-- <div>
