--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
             <div>
-                <a href="https://busybot.cs.columbia.edu/" style="height: 12em;" class="research-thumb">
-                    <video width="320" height="auto" autoplay loop muted>
-                        <source src="assets/images/BusyBot_CoRL.gif" type="video/mp4">
-                    </video>
+                <a href="https://busybot.cs.columbia.edu/" style="height: 12em;" class="research-thumb"><img
+                    src="assets/images/BusyBot_CoRL.gif" alt="">
                 </a>
                 <a href="https://busybot.cs.columbia.edu/" class="research-proj-title">
                     BusyBot: Learning to Interact, Reason, and Plan in a BusyBoard Environment
@@ -98,7 +96,7 @@
                     <br>Conference on Robot Learning (CoRL), December 2022<br>
                     <a href="https://busybot.cs.columbia.edu/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2207.08192">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="https://youtu.be/EJ98xBJZ9ek">Video</a>
+                    <a href="https://youtu.be/EJ98xBJZ9ek">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="/">Code coming soon</a>
                 </p>
             </div>
