--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>
                     Hi, I'm a first-year Computer Science PhD student at Columbia University.
                     My work focuses on developing methods for embodied agents to better understand diverse environments and plan for complex tasks. 
-                    I'm particularly interested in developing robots that are able to assist humans in household environments.
+                    I'm particularly passionate about robots that are able to assist humans in household environments.
                 </p>
                 <p>
                     I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>.
@@ -47,7 +47,7 @@
                 </p>
                 <p>
                     I'm interested in exploring new things as driven by my curiosity. 
-                    I recently picked up sailing as a hobby when I was spending my summer in Boston.
+                    I recently picked up sailing as a hobby while I was spending my summer in Boston.
                 </p>
                 <div>
                     <a href="https://scholar.google.com/citations?hl=en&user=Hzw-rp4AAAAJ">
@@ -73,7 +73,7 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
-                <li> <b>Sep 2022</b> My undergraduate project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accpeted by <a href="https://corl2022.org/">CoRL 2022</a>!
+                <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accpeted by <a href="https://corl2022.org/">CoRL 2022</a>!
                 <li> <b>Sep 2022</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻 
                     Thanks Columbia for the Presidential Fellowship:)
                 <li> <b>May 2022</b> Graduated from Columbia University (SEAS) with a BS in Computer Science 🦁️
