--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#profile-intro">Home</a>
             <a href="#updates">Updates</a>
             <a href="#research">Research</a>
-            <!-- <a href="#blogs">Blogs</a> -->
+            <a href="#updates">Teaching & Outreach</a>
         </header>
         <div id="profile">
             <div id="profile-pic">
@@ -39,14 +39,14 @@
                 <p>
                     Hi, I'm a first-year Computer Science PhD student at Columbia University.
                     My work focuses on developing methods for embodied agents to better understand diverse environments and plan for complex tasks. 
-                    I'm particularly passionate about robots that are able to assist humans in household environments.
+                    I'm particularly interested in robots that are able to assist humans in household environments.
                 </p>
                 <p>
                     I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>.
                     My research will focus on robot manipulation and computer vision.
                 </p>
                 <p>
-                    I'm interested in exploring new things as driven by my curiosity. 
+                    I would love to explore new things as driven by my curiosity. 
                     I recently picked up sailing as a hobby while I was spending my summer in Boston.
                 </p>
                 <div>
@@ -106,6 +106,22 @@
                 <p>* indicates equal contribution</p>
             </div> -->
 
+            <div style="clear: both;"></div>
+        </div>
+        <div class="divider"></div>
+        <div class="section" id="updates">
+            <h1>Teaching & Outreach</h1>
+            <p>
+                I hold a passion for teaching and empowering minorities in academia/tech.
+            </p>
+            <ul>
+                <li> <b>Fall 2022</b> COMS E6998 Topics in Robot Learning
+                <li> <b>Spring 2021/Fall 2021/Spring 2022</b> COMS W4733 Computational Aspects of Robotics
+                <li> <b>Fall 2020</b> COMS W4701 Artificial Intelligence</li>
+                <li> <b>2021-2022</b> Academic Chair for Womxn in CS @ Columbia (<a href="https://cuwics.github.io/">WiCS</a>)</li>
+                <li> <b>2019-2021</b> Treasurer for Womxn in CS @ Columbia (<a href="https://cuwics.github.io/">WiCS</a>)</li>
+            </ul>
+            <p></p>
             <div style="clear: both;"></div>
         </div>
         <!-- <div class="divider"></div>
