--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <a href="https://busybot.cs.columbia.edu/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2207.08192">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://youtu.be/EJ98xBJZ9ek">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="/">Code coming soon</a>
+                    <a href="https://github.com/columbia-ai-robotics/busybot">Code</a>
                 </p>
             </div>
             <!-- <div>
