--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     <a href="https://youtu.be/EJ98xBJZ9ek">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://github.com/columbia-ai-robotics/busybot">Code</a>
                 </p>
+                <p>
+                    TL;DR: A <b>simulated learning environment</b> inspired by busyboard for embodied agents to acquire object manipulation, inter-object relation reasoning, and goal-conditioned planning skills.
+                </p>
             </div>
             <!-- <div>
                 <p>* indicates equal contribution</p>
