Add TL;DR to paper

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </p>
                 <br>
                 <p>
-                    <b>TL;DR</b>: A simulated learning environment inspired by busyboards for embodied agents to acquire object manipulation, inter-object relation reasoning, and goal-conditioned planning skills.
+                    <b>TL;DR</b>: A toy-inspired simulated learning environment for embodied agents to acquire object manipulation, inter-object relation reasoning, and goal-conditioned planning skills.
                 </p>
             </div>
             <!-- <div>
