--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <div id="profile-email">liuzeyi at cs dot columbia dot edu</div>
                 <p>
                     Hi, I'm a first-year Computer Science PhD student at Columbia University.
-                    My work focuses on developing methods for embodied agents to better understand diverse environments and plan for complex tasks. 
+                    My work focuses on developing methods for embodied agents to better understand diverse environments and plan for long-horizon tasks. 
                     I'm particularly interested in robots that are able to assist humans in household environments.
                 </p>
                 <p>
                     I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>.
-                    My research will focus on robot manipulation and computer vision.
+                    My research will focus on robot perception and planning.
                 </p>
                 <div>
                     <a href="https://scholar.google.com/citations?hl=en&user=Hzw-rp4AAAAJ">
