--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
         <div class="section" id="updates">
             <h1>Teaching & Outreach</h1>
             <p>
-                I hold a passion for teaching and empowering minorities in academia/tech.
+                I hold a passion for teaching and empowering minorities in academia/tech industry.
             </p>
             <ul>
                 <li> <b>Fall 2022</b> COMS E6998 Topics in Robot Learning
-                <li> <b>Spring 2021/Fall 2021/Spring 2022</b> COMS W4733 Computational Aspects of Robotics
+                <li> <b>Spring 2021/Fall 2021/Spring 2022/Spring 2023</b> COMS W4733 Computational Aspects of Robotics
                 <li> <b>Fall 2020</b> COMS W4701 Artificial Intelligence
                 <li> <b>2021-2022</b> Academic Chair for Womxn in CS @ Columbia (<a href="https://cuwics.github.io/">WiCS</a>)
                 <li> <b>2019-2021</b> Treasurer for Womxn in CS @ Columbia (<a href="https://cuwics.github.io/">WiCS</a>)
-            </ul>
+            </ul><br>
             <p></p>
             <div style="clear: both;"></div>
         </div>
