--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
             <div>
+                <a href="https://robot-reflect.github.io/" style="height: 12em;" class="research-thumb"><img
+                    src="assets/images/REFLECT.gif" alt="">
+                </a>
+                <a href="https://robot-reflect.github.io/" class="research-proj-title">
+                    REFLECT: Summarizing Robot Experiences for Failure Explanation and Correction
+                </a>
+                <p>
+                    <b>Zeyi Liu</b>
+                    ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety</a>
+                    ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
+                    <br><br>
+                    <a href="https://robot-reflect.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2306.15724">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://www.youtube.com/watch?v=Proiua4NNTk">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://github.com/columbia-ai-robotics/reflect">Code</a>
+                </p>
+                <br>
+                <p>
+                    <b>TL;DR</b>: REFLECT is a framework that leverages Large Language Models (LLMs) for robot failure explanation and correction, based on a hierarchical summary of robot past experiences generated from multi-sensory data.
+                </p>
+            </div>
+            <div>
                 <a href="https://busybot.cs.columbia.edu/" style="height: 12em;" class="research-thumb"><img
                     src="assets/images/BusyBot_CoRL.gif" alt="">
                 </a>
