--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     REFLECT: Summarizing Robot Experiences for Failure Explanation and Correction
                 </a>
                 <p>
-                    <b>Zeyi Liu</b>
-                    ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety</a>
+                    <b>Zeyi Liu*</b>
+                    ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety*</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <br>Preprint<br>
                     <a href="https://robot-reflect.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
