--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
                 <div id="profile-name">Zeyi Liu 刘泽怡</div>
                 <div id="profile-email">liuzeyi at cs dot columbia dot edu</div>
                 <p>
-                    Hi, I'm a first-year Computer Science PhD student at Columbia University.
-                    My work focuses on developing methods for embodied agents to better understand diverse environments and plan for long-horizon tasks. 
-                    I'm particularly interested in robots that are able to assist humans in household environments.
+                    Hi, I'm a second-year PhD student in the Electrical Engineering department at Stanford University.
+                    My work focuses on robot perception and manipulation, more specifically, 
+                    I'm interested in developing methods for embodied agents to better perceive and understand the environment through sensory inputs, which facilitates learning of robust and generalizable policies.
                 </p>
                 <p>
-                    I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>.
-                    My research will focus on robot perception and planning.
+                    I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab at Stanford.
                 </p>
                 <div>
                     <a href="https://scholar.google.com/citations?hl=en&user=Hzw-rp4AAAAJ">
@@ -69,6 +68,7 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
+                <li> <b>Aug 2023</b> My first PhD project <a href="https://robot-reflect.github.io/">REFLECT</a> is accpeted by <a href="https://corl2023.org/">CoRL 2023</a>!
                 <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accpeted by <a href="https://corl2022.org/">CoRL 2022</a>!
                 <li> <b>Sep 2022</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻 
                     Thanks Columbia for the Presidential Fellowship:)
@@ -91,7 +91,7 @@
                     <b>Zeyi Liu*</b>
                     ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety*</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
-                    <br>Preprint<br>
+                    <br>Conference on Robot Learning (CoRL), November 2023<br>
                     <a href="https://robot-reflect.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2306.15724">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://www.youtube.com/watch?v=Proiua4NNTk">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
@@ -99,7 +99,7 @@
                 </p>
                 <br>
                 <p>
-                    <b>TL;DR</b>: REFLECT is a framework that leverages Large Language Models (LLMs) for robot failure explanation and correction, based on a hierarchical summary of robot past experiences generated from multi-sensory data.
+                    <b>TL;DR</b>: REFLECT is a framework that leverages Large Language Models (LLMs) for robot failure explanation and correction, based on a hierarchical summary of robot past experiences generated from multisensory data.
                 </p>
             </div>
             <div>
