--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div id="profile-intro">
                 <div id="profile-name">Zeyi Liu 刘泽怡</div>
-                <div id="profile-email">liuzeyi at cs dot columbia dot edu</div>
+                <div id="profile-email">liuzeyi at stanford dot edu</div>
                 <p>
                     Hi, I'm a second-year PhD student in the Electrical Engineering department at Stanford University.
                     My work focuses on robot perception and manipulation, more specifically, 
@@ -137,9 +137,9 @@
                 I hold a passion for teaching and empowering minorities in academia/tech industry.
             </p>
             <ul>
-                <li> <b>Fall 2022</b> COMS E6998 Topics in Robot Learning
-                <li> <b>Spring 2021/Fall 2021/Spring 2022/Spring 2023</b> COMS W4733 Computational Aspects of Robotics
-                <li> <b>Fall 2020</b> COMS W4701 Artificial Intelligence
+                <li> <b>Fall 2022</b> COMS E6998 Topics in Robot Learning @ Columbia
+                <li> <b>Spring 2021/Fall 2021/Spring 2022/Spring 2023</b> COMS W4733 Computational Aspects of Robotics @ Columbia
+                <li> <b>Fall 2020</b> COMS W4701 Artificial Intelligence @ Columbia
                 <li> <b>2021-2022</b> Academic Chair for Womxn in CS @ Columbia (<a href="https://cuwics.github.io/">WiCS</a>)
                 <li> <b>2019-2021</b> Treasurer for Womxn in CS @ Columbia (<a href="https://cuwics.github.io/">WiCS</a>)
             </ul><br>
