--- a/index.html
+++ b/index.html
@@ -37,12 +37,9 @@
                 <div id="profile-name">Zeyi Liu 刘泽怡</div>
                 <div id="profile-email">liuzeyi at stanford dot edu</div>
                 <p>
-                    Hi, I'm a second-year PhD student in the Electrical Engineering department at Stanford University.
+                    Hi, I'm a second-year PhD student at Stanford University, advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab.
                     My work focuses on robot perception and manipulation, more specifically, 
                     I'm interested in developing methods for embodied agents to better perceive and understand the environment through sensory inputs, which facilitates learning of robust and generalizable policies.
-                </p>
-                <p>
-                    I'm fortunate to be advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab at Stanford.
                 </p>
                 <div>
                     <a href="https://scholar.google.com/citations?hl=en&user=Hzw-rp4AAAAJ">
