--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         gtag('config', 'G-LDSQMLZ3GJ');
     </script> -->
     <title> Zeyi Liu </title>
-    <link rel="icon" type="image/x-icon" href="assets/images/seas.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/stanford.ico">
 </head>
 
 <body>
