--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </p>
                 <p>
                     My work focuses on robot perception and manipulation, more specifically, 
-                    I'm interested in developing methods for embodied agents to better perceive and understand the environment through sensory inputs, which facilitates learning of robust and generalizable policies.
+                    I'm interested in developing methods for embodied agents to better perceive and understand with the environment through multimodal inputs, which facilitates learning of robust and generalizable policies.
                 </p>
                 <div>
                     <a href="https://scholar.google.com/citations?hl=en&user=Hzw-rp4AAAAJ">
