Update project gif

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety*</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <br>Conference on Robot Learning (CoRL), November 2023<br>
+                    <br>CoRL Workshop on Language and Robot Learning, Oral<br>
                     <a href="https://robot-reflect.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2306.15724">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://www.youtube.com/watch?v=Proiua4NNTk">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
@@ -103,7 +104,7 @@
             </div>
             <div>
                 <a href="https://busybot.cs.columbia.edu/" style="height: 12em;" class="research-thumb"><img
-                    src="assets/images/BusyBot_CoRL.gif" alt="">
+                    src="assets/images/BusyBot.gif" alt="">
                 </a>
                 <a href="https://busybot.cs.columbia.edu/" class="research-proj-title">
                     BusyBot: Learning to Interact, Reason, and Plan in a BusyBoard Environment
