Fix typos and grammar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Hi, I'm a second-year PhD student at Stanford University, advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab.
                 </p>
                 <p>
-                    My work focuses on robot perception and manipulation, more specifically, 
+                    My work focuses on robot perception and manipulation. More specifically, 
                     I'm interested in developing methods for embodied agents to better perceive and understand with the environment through multimodal inputs, which facilitates learning of robust and generalizable policies.
                 </p>
                 <div>
@@ -67,8 +67,8 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
-                <li> <b>Aug 2023</b> My first PhD project <a href="https://robot-reflect.github.io/">REFLECT</a> is accpeted by <a href="https://corl2023.org/">CoRL 2023</a>!
-                <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accpeted by <a href="https://corl2022.org/">CoRL 2022</a>!
+                <li> <b>Aug 2023</b> My first PhD project <a href="https://robot-reflect.github.io/">REFLECT</a> is accepted by <a href="https://corl2023.org/">CoRL 2023</a>!
+                <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accepted by <a href="https://corl2022.org/">CoRL 2022</a>!
                 <li> <b>Sep 2022</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻 
                     Thanks Columbia for the Presidential Fellowship:)
                 <li> <b>May 2022</b> Graduated from Columbia University (SEAS) with a BS in Computer Science 🦁️
