--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
             <p></p>
             <div style="clear: both;"></div>
         </div>
+        <div>
+            <p>
+                * indicates equal contribution
+            </p>
+        </div>
         <!-- <div class="divider"></div>
         <div style="display:flex;flex-direction: column;">
             <h1>Projects</h1>
