--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div id="profile-name">Zeyi Liu 刘泽怡</div>
                 <div id="profile-email">liuzeyi at stanford dot edu</div>
                 <p>
-                    Hi, I'm a second-year PhD student at Stanford University, advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab.
+                    Hi, I'm a second-year PhD student at Stanford University, advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab. Previously, I was an undergraduate student at Columbia University studying Computer Science and Applied Math.
                 </p>
                 <p>
                     My work focuses on robot perception and manipulation. More specifically, 
