--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
+                <li> <b>Jan 2024</b> Excited to be joining the Robotics team at TRI as a summer intern in Cambridge!</li>
                 <li> <b>Aug 2023</b> My first PhD project <a href="https://robot-reflect.github.io/">REFLECT</a> is accepted by <a href="https://corl2023.org/">CoRL 2023</a>!
                 <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accepted by <a href="https://corl2022.org/">CoRL 2022</a>!
                 <li> <b>Sep 2022</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻 
