add new projects

--- a/index.html
+++ b/index.html
@@ -80,15 +80,62 @@
         <div class="divider"></div>
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
-            <div>
+            <div style="margin-bottom:25px;">
+                <a href="https://mani-wav.github.io/" style="height: 12em;" class="research-thumb"><img
+                    src="assets/images/tasks.gif" alt="">
+                </a>
+                <a href="https://mani-wav.github.io/" class="research-proj-title">
+                    ManiWAV: Learning Robot Manipulation from In-the-Wild Audio-Visual Data
+                </a>
+                <p>
+                    <b style="color: #022169">Zeyi Liu</b>
+                    ,<a style="color:#000;" href="https://arpitrf.github.io/">Cheng Chi</a>
+                    ,<a style="color:#000;" href="https://eacousineau.com/">Eric Cousineau</a>
+                    ,<a style="color:#000;" href="https://naveenoid.wordpress.com/">Naveen Kuppuswamy</a>
+                    ,<a style="color:#000;" href="https://www.benburchfiel.com/">Benjamin Burchfiel</a>
+                    ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
+                    <br>
+                    <a href="https://mani-wav.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2406.19464">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://www.youtube.com/watch?v=SzHENLZ7_tc">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://github.com/real-stanford/maniwav">Code</a>
+                </p>
+                <br>
+                <p>
+                    <b>TL;DR</b>: A data collection and policy learning framework that learns contact-rich robot manipulation skills from in-the-wild audio-visual data.
+                </p>
+            </div>
+            <div style="margin-bottom:25px;">
+                <a href="https://clairezixiwang.github.io/ContactHandover.github.io/" style="height: 12em;" class="research-thumb"><img
+                    src="assets/images/contact-handover.png" alt="">
+                </a>
+                <a href="https://clairezixiwang.github.io/ContactHandover.github.io/" class="research-proj-title">
+                    ContactHandover: Contact-Guided Robot-to-Human Object Handover
+                </a>
+                <p>
+                    <a style="color:#000;" href="https://clairezixiwang.github.io/">Zixi Wang</a>
+                    ,<b style="color: #022169">Zeyi Liu</b>
+                    ,<a style="color:#000;" href="https://www.nicolas.info/">Nicolas Ouporov</a>
+                    ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
+                    <br>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), October 2024
+                    <a href="https://clairezixiwang.github.io/ContactHandover.github.io//">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2404.01402">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2404.01402">Code (coming soon)</a>
+                </p>
+                <br>
+                <p>
+                    <b>TL;DR</b>: A robot to human handover system that leverages human contact points to inform robot grasp and object delivery pose.
+                </p>
+            </div>
+            <div style="margin-bottom:25px;">
                 <a href="https://robot-reflect.github.io/" style="height: 12em;" class="research-thumb"><img
-                    src="assets/images/REFLECT.gif" alt="">
+                    src="assets/images/reflect.gif" alt="">
                 </a>
                 <a href="https://robot-reflect.github.io/" class="research-proj-title">
                     REFLECT: Summarizing Robot Experiences for Failure Explanation and Correction
                 </a>
                 <p>
-                    <b>Zeyi Liu*</b>
+                    <b style="color: #022169">Zeyi Liu*</b>
                     ,<a style="color:#000;" href="https://arpitrf.github.io/">Arpit Bahety*</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
                     <br>Conference on Robot Learning (CoRL), November 2023<br>
@@ -100,18 +147,18 @@
                 </p>
                 <br>
                 <p>
-                    <b>TL;DR</b>: REFLECT is a framework that leverages Large Language Models (LLMs) for robot failure explanation and correction, based on a hierarchical summary of robot past experiences generated from multisensory data.
+                    <b>TL;DR</b>: A framework that leverages LLM for robot failure explanation and correction, based on a hierarchical summary of robot past experiences generated from multisensory data.
                 </p>
             </div>
-            <div>
+            <div style="margin-bottom:25px;">
                 <a href="https://busybot.cs.columbia.edu/" style="height: 12em;" class="research-thumb"><img
-                    src="assets/images/BusyBot.gif" alt="">
+                    src="assets/images/busybot.gif" alt="">
                 </a>
                 <a href="https://busybot.cs.columbia.edu/" class="research-proj-title">
                     BusyBot: Learning to Interact, Reason, and Plan in a BusyBoard Environment
                 </a>
                 <p>
-                    <b>Zeyi Liu</b>
+                    <b style="color: #022169">Zeyi Liu</b>
                     ,<a style="color:#000;" href="https://www.zhenjiaxu.com/">Zhenjia Xu</a>
                     ,<a style="color:#000;" href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a>
                     <br>Conference on Robot Learning (CoRL), December 2022<br>
