add new projects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div id="profile-name">Zeyi Liu 刘泽怡</div>
                 <div id="profile-email">liuzeyi at stanford dot edu</div>
                 <p>
-                    Hi, I'm a second-year PhD student at Stanford University, advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab. Previously, I was an undergraduate student at Columbia University studying Computer Science and Applied Math.
+                    Hi, I'm a third year PhD student at Stanford University, advised by Professor <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> and part of the <a href="http://real.stanford.edu/">REAL</a> lab. Previously, I was an undergraduate student at Columbia University studying Computer Science and Applied Math.
                 </p>
                 <p>
                     My work focuses on robot perception and manipulation. More specifically, 
@@ -80,6 +80,32 @@
         <div class="divider"></div>
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Research</h1>
+            <div style="margin-bottom:50px;">
+                <a href="https://adaptive-compliance.github.io/" style="height: 12em;" class="research-thumb"><img
+                    src="assets/images/acp.gif" alt="">
+                </a>
+                <a href="https://adaptive-compliance.github.io/" class="research-proj-title">
+                    Adaptive Compliance Policy: Learning Approximate Compliance for Diffusion Guided Control
+                </a>
+                <p>
+                    <a style="color:#000;" href="https://arpitrf.github.io/">Yifan Hou</a>
+                    <b style="color: #022169">Zeyi Liu</b>
+                    ,<a style="color:#000;" href="https://cheng-chi.github.io/">Cheng Chi</a>
+                    ,<a style="color:#000;" href="https://eacousineau.com/">Eric Cousineau</a>
+                    ,<a style="color:#000;" href="https://naveenoid.wordpress.com/">Naveen Kuppuswamy</a>
+                    ,<a style="color:#000;" href="https://www.cs.cmu.edu/~sfeng/">Siyuan Feng</a>
+                    ,<a style="color:#000;" href="https://www.benburchfiel.com/">Benjamin Burchfiel</a>
+                    ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
+                    <br>In Submission to IEEE International Conference on Robotics and Automation (ICRA), 2025<br>
+                    <a href="https://adaptive-compliance.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://arxiv.org/abs/2410.09309">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://github.com/yifan-hou/adaptive_compliance_policy">Code</a>
+                </p>
+                <br>
+                <p>
+                    <b>TL;DR</b>: Levergae diffusion model to learn adaptive compliance control for contact-rich tasks from vision and force feedback.
+                </p>
+            </div>
             <div style="margin-bottom:25px;">
                 <a href="https://mani-wav.github.io/" style="height: 12em;" class="research-thumb"><img
                     src="assets/images/tasks.gif" alt="">
@@ -89,12 +115,13 @@
                 </a>
                 <p>
                     <b style="color: #022169">Zeyi Liu</b>
-                    ,<a style="color:#000;" href="https://arpitrf.github.io/">Cheng Chi</a>
+                    ,<a style="color:#000;" href="https://cheng-chi.github.io/">Cheng Chi</a>
                     ,<a style="color:#000;" href="https://eacousineau.com/">Eric Cousineau</a>
                     ,<a style="color:#000;" href="https://naveenoid.wordpress.com/">Naveen Kuppuswamy</a>
                     ,<a style="color:#000;" href="https://www.benburchfiel.com/">Benjamin Burchfiel</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
-                    <br>
+                    <br>Conference on Robot Learning (CoRL), November 2024<br>
+                    CoRL Workshop on Mastering Robot Manipulation in a World of Abundant Data (<b>Oral presentation</b>)<br>
                     <a href="https://mani-wav.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2406.19464">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://www.youtube.com/watch?v=SzHENLZ7_tc">Video</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
