--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </a>
                 <p>
                     <a style="color:#000;" href="https://arpitrf.github.io/">Yifan Hou</a>
-                    <b style="color: #022169">Zeyi Liu</b>
+                    ,<b style="color: #022169">Zeyi Liu</b>
                     ,<a style="color:#000;" href="https://cheng-chi.github.io/">Cheng Chi</a>
                     ,<a style="color:#000;" href="https://eacousineau.com/">Eric Cousineau</a>
                     ,<a style="color:#000;" href="https://naveenoid.wordpress.com/">Naveen Kuppuswamy</a>
