--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
+                <li> <b>Feb 2025</b> Excited to be joining the Embodied AI team at Meta as a summer intern in Menlo Park!</li>
+                <li> <b>Aug 2024</b> My second PhD project <a href="https://maniwav.github.io/">ManiWAV</a> is accepted by CoRL 2024!
                 <li> <b>Jan 2024</b> Excited to be joining the Robotics team at TRI as a summer intern in Cambridge!</li>
-                <li> <b>Aug 2023</b> My first PhD project <a href="https://robot-reflect.github.io/">REFLECT</a> is accepted by <a href="https://corl2023.org/">CoRL 2023</a>!
-                <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accepted by <a href="https://corl2022.org/">CoRL 2022</a>!
+                <li> <b>Aug 2023</b> My first PhD project <a href="https://robot-reflect.github.io/">REFLECT</a> is accepted by CoRL 2023!
+                <li> <b>Sep 2022</b> My undergrad project <a href="https://busybot.cs.columbia.edu/">BusyBot</a> is accepted by CoRL 2022!
                 <li> <b>Sep 2022</b> Promoted by Prof. <a href="https://www.cs.columbia.edu/~shurans/">Shuran Song</a> to be a first-year PhD student in her <a href="https://cair.cs.columbia.edu/index.html">lab</a> 🐻 
                     Thanks Columbia for the Presidential Fellowship:)
                 <li> <b>May 2022</b> Graduated from Columbia University (SEAS) with a BS in Computer Science 🦁️
@@ -96,7 +98,7 @@
                     ,<a style="color:#000;" href="https://www.cs.cmu.edu/~sfeng/">Siyuan Feng</a>
                     ,<a style="color:#000;" href="https://www.benburchfiel.com/">Benjamin Burchfiel</a>
                     ,<a style="color:#000;" href="https://shurans.github.io/">Shuran Song</a>
-                    <br>In Submission to IEEE International Conference on Robotics and Automation (ICRA), 2025<br>
+                    <br>IEEE International Conference on Robotics and Automation (ICRA), 2025<br>
                     <a href="https://adaptive-compliance.github.io/">Website</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://arxiv.org/abs/2410.09309">ArXiv</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="https://github.com/yifan-hou/adaptive_compliance_policy">Code</a>
@@ -107,10 +109,10 @@
                 </p>
             </div>
             <div style="margin-bottom:25px;">
-                <a href="https://mani-wav.github.io/" style="height: 12em;" class="research-thumb"><img
+                <a href="https://maniwav.github.io/" style="height: 12em;" class="research-thumb"><img
                     src="assets/images/tasks.gif" alt="">
                 </a>
-                <a href="https://mani-wav.github.io/" class="research-proj-title">
+                <a href="https://maniwav.github.io/" class="research-proj-title">
                     ManiWAV: Learning Robot Manipulation from In-the-Wild Audio-Visual Data
                 </a>
                 <p>
@@ -213,11 +215,15 @@
         </div>
         <div class="divider"></div>
         <div class="section" id="updates">
+            <h1>Workshops</h1>
+            <p><b>ICRA 2025</b> 1st Workshop on Acoustic Sensing and Representations for Robotics &nbsp;&bull;&nbsp; <a href="https://sites.google.com/view/roboacoustics">RoboAcoustics@ICRA 2025</a>
+            </p>
             <h1>Teaching & Outreach</h1>
             <p>
                 I hold a passion for teaching and empowering minorities in academia/tech industry.
             </p>
             <ul>
+                <li> <b>Winter 2025</b> EE 381 Sensorimotor Learning for Embodied Agents @ Stanford
                 <li> <b>Fall 2022</b> COMS E6998 Topics in Robot Learning @ Columbia
                 <li> <b>Spring 2021/Fall 2021/Spring 2022/Spring 2023</b> COMS W4733 Computational Aspects of Robotics @ Columbia
                 <li> <b>Fall 2020</b> COMS W4701 Artificial Intelligence @ Columbia
